# Workout-Updater

./: Makefile  README.md  lambda_function.py  pyproject.toml
.github/workflows/: basic-workflow.yml  deploy-lambda.yml
workout_updater/: lambda_function.py
