[project]
name = "workout-updater"
version = "0.1.0"
description = ""
authors = [
    {name = "TalesNotTails",email = "c.jetta2014@gmail.com"}
]
readme = "README.md"
requires-python = "=3.12.12"
dependencies = [
    "notion-client (>=2.7.0,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "datetime (>=5.5,<6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
